Fixed overlapping menu.

--- a/menu.css
+++ b/menu.css
@@ -9,7 +9,7 @@
 [id=content] {
 	/* *****  EDIT THIS VALUE IF CONTENT OVERLAPS MENU ***** */
 	position:absolute;
-  left:29ex;
+	left:32ex;
 	padding-right:4ex;
 }
 
